--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ html,body{
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    z-index: 80;
+    top: 0%;
+    z-index: 120;
 }
 
 #nav #logo{
@@ -83,7 +84,7 @@ html,body{
 #navToggle{
     height: 0vh;
     width: 100vw;
-    position: absolute;
+    position: fixed;
     z-index: 60;
     background-color: rgba(0, 0, 0, 0.371);
     backdrop-filter: blur(10px); 
@@ -99,25 +100,24 @@ html,body{
     padding-bottom: 20px;
 }
 #atags{
-    height: 100%;
+    height: 40%;
     width: 60%;
     display: flex;
-    padding: 15vh 30px;
+    padding: 0vh 30px;
     flex-wrap: wrap;
     gap: 0px;
     align-items: center;
+    margin-top: 15vh;
     justify-content: flex-start;
 }
 #atags a{
-   
     height: 10vh;
     font-size: 4.2vw;
     color: rgba(0, 0, 0, 0.301);
     text-transform: uppercase;
     text-decoration: none;
     margin-right: 40px;
-    filter: blur(0px);
-    
+    filter: blur(0px);  
 }
 
 #atags h1{
@@ -233,7 +233,7 @@ html,body{
     height: 100vh;
     width: 100vw;
     background-color: #F3F0EA;
-    position: fixed;
+    position: absolute;
     z-index: 99;
     display: flex;
     flex-direction: column;
@@ -289,4 +289,197 @@ html,body{
     font-size: 10vw;
     font-weight: 500;
     color: #4C3D30;
+}
+
+
+#lower{
+    position: absolute;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-right: 10vw;
+    gap: 5vh;
+    top: 33%;
+    transform: translateY(-100%);
+}
+#lower h1{
+    text-transform: uppercase;
+    color: #FFFF ;
+    font-size: 4vw;
+    font-weight: 400;
+    text-align: right;
+    line-height: 8.5vh;
+}
+#box{
+    height: 50vh;
+    width: 25vw;
+    background-color: transparent;
+    transform: translateX(25%);
+    padding: 11px;
+    color: transparent;
+}
+#mid{
+    height: 84%;
+    width: 100%;
+    background-color: #F3F0EA;
+}
+#mid img{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    transform: scale(1);
+}
+
+#lower h6{
+    font-size: 1vw;
+    font-weight: 400;
+}
+
+#lower h5{
+    font-size: 1vw;
+    font-weight: 700;
+    margin-bottom: 8px;
+}
+#box h4{
+    font-size: 1vw;
+    font-weight: 400;
+    padding-left: 14.5vw;
+}
+#lower h2{
+    font-size: 6vw;
+    color: #FFFF;
+    text-transform: uppercase;
+    font-weight: 400;
+    transform: translateX(6.7vw);
+}
+#page2{
+    height: 100vh;
+    width: 100vw;
+    background-color: #F3F0EA;
+    display: flex;
+    position: relative;
+}
+
+#left2{
+    height: 100%;
+    width: 40%;
+    padding: 10vh 8vw;
+    position: relative;
+}
+#img1{
+    height: 26.3vw;
+    width: 23.5vw;
+    position: absolute;
+}
+
+#img2{
+    height: 18.6vw;
+    width: 16.6vw;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+}
+#right2{
+    height: 100%;
+    width: 60%;
+    padding: 6vw 3vw;
+}
+#right2 h1{
+    color: #4C3D30;
+    font-weight: 300;
+    font-size: 3.1vw;
+    margin-bottom: 2vw;
+}
+#right2 h5{
+    width: 24vw;
+    color: #4C3D30;
+    font-weight: 300;
+    font-size: 1.1vw;
+    line-height: 3vh;
+    margin-bottom: 2vw;
+}
+#button2{
+    height: 50px;
+    width: 150px;
+    border-radius: 50px;
+    border: 1px #4C3D30 solid;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 5px;
+    padding-left: 15px;
+}
+#button2 #outer{
+    height: 1.9vh;
+    width: 6vw;
+    padding-left: 2px;
+    overflow: hidden;
+}
+#button2 h4{
+    font-size: .95vw;
+    color: #4C3D30;
+    font-weight: 500;
+}
+#arrow2{
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+    background-color: #4C3D30;
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    overflow: hidden;
+}
+#arrow2 i{
+    display: inline-block;
+    color: #F3F0EA;
+    transform: scale(2);
+}
+#page3{
+    height: 100vh;
+    width: 100vw;
+    background-color: #F3F0EA;
+    padding: 1.5vw;
+}
+#page3 h1{
+    font-size: 3vw;
+    font-weight: 400;
+    color: #4C3D30;
+    margin-bottom: 1vw;
+}
+#caseroll{
+    height: 32.5vw;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    transform: translateX();
+}
+ .card{
+    height: 32.5vw;
+    width: 27vw;
+    background-color: #E8E0D4;
+    padding: 1vw;
+    flex-shrink: 0;
+ }
+
+#photo{
+    height: 82%;
+    width: 100%;
+    margin-bottom: 1vw;
+ }
+.card h5{
+    font-size: 0.95vw !important;
+    font-weight: 500;
+    text-transform: uppercase;
+ }
+
+.card h1{
+    font-size: 2.5vw !important;
+    font-weight: 300 !important;
+}
+#photo img{
+    width: 100%;
+    object-fit: cover;
 }
